--- a/subpage.html
+++ b/subpage.html
@@ -55,6 +55,7 @@
             <div class="price">$10.41 <span>Per Month</span></div>
             <a href="#" class="btn">Order Now <i class="fa fa-caret-right" aria-hidden="true"></i></a> </div>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took</p>
+          <div class="accordion">
           <h3 class="title package">Package Allowances <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
@@ -86,6 +87,8 @@
               <td>Included</td>
             </tr>
           </table>
+          </div>
+          <div class="accordion">
           <h3 class="title webServer">Web Server <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
@@ -109,6 +112,8 @@
               <td>PHP 7 &amp; 8</td>
             </tr>
           </table>
+          </div>
+          <div class="accordion">
           <h3 class="title e-mail">E-Mail <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
@@ -132,6 +137,7 @@
               <td>Included</td>
             </tr>
           </table>
+          </div>
         </div>
       </div>
       <div class="col-lg-4">
@@ -142,6 +148,7 @@
             <div class="price white">$15.66 <span class="white">Per Month</span></div>
             <a href="#" class="btn">Order Now <i class="fa fa-caret-right" aria-hidden="true"></i></a> </div>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took</p>
+          <div class="accordion">
           <h3 class="title package">Package Allowances <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
@@ -173,6 +180,8 @@
               <td>Included</td>
             </tr>
           </table>
+          </div>
+          <div class="accordion">
           <h3 class="title webServer">Web Server <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
@@ -196,6 +205,8 @@
               <td>PHP 7 &amp; 8</td>
             </tr>
           </table>
+          </div>
+          <div class="accordion">
           <h3 class="title e-mail">E-Mail <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
@@ -219,6 +230,7 @@
               <td>Included</td>
             </tr>
           </table>
+          </div>
         </div>
       </div>
       <div class="col-lg-4">
@@ -228,6 +240,7 @@
             <div class="price">$20.91 <span>Per Month</span></div>
             <a href="#" class="btn">Order Now <i class="fa fa-caret-right" aria-hidden="true"></i></a> </div>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took</p>
+          <div class="accordion">
           <h3 class="title package">Package Allowances <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
@@ -259,6 +272,8 @@
               <td>Included</td>
             </tr>
           </table>
+          </div>
+          <div class="accordion">
           <h3 class="title webServer">Web Server <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
@@ -282,6 +297,8 @@
               <td>PHP 7 &amp; 8</td>
             </tr>
           </table>
+          </div>
+          <div class="accordion">
           <h3 class="title e-mail">E-Mail <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
@@ -305,6 +322,7 @@
               <td>Included</td>
             </tr>
           </table>
+          </div>
         </div>
       </div>
     </div>
