--- a/subpage.html
+++ b/subpage.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 </header>
-<section class="hero innerHero text-center">
+<section class="innerHero text-center">
   <div class="container">
     <div class="row ver-center">
       <div class="col-lg-8 mr-auto ml-auto">
