--- a/subpage.html
+++ b/subpage.html
@@ -59,31 +59,31 @@
           <h3 class="title package">Package Allowances <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Websites</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem Ipsum Dolor Sit</i></b> Websites</td>
               <td>2</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Subdomains</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Subdomains</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> SSD Cloud Disk Space</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> SSD Cloud Disk Space</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Monthly traffic</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Monthly traffic</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> MariaDB 10.5 Databases</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> MariaDB 10.5 Databases</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Website Migration Support</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Website Migration Support</td>
               <td>Free</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Site.Pro SiteBuilder</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Site.Pro SiteBuilder</td>
               <td>Included</td>
             </tr>
           </table>
@@ -92,23 +92,23 @@
           <h3 class="title webServer">Web Server <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
-              <td width="65%"><img src="images/question-mark.png" alt=""> LetsEncrypt SSL Certificate</td>
+              <td width="65%"><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> LetsEncrypt SSL Certificate</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Speed</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Speed</td>
               <td><span>1GB RAM 25 Processes</span></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> iNode Limit</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> iNode Limit</td>
               <td>100,000</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Web Server</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Web Server</td>
               <td><span>Litespeed Enterprise</span></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> PHP Version Support</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> PHP Version Support</td>
               <td>PHP 7 &amp; 8</td>
             </tr>
           </table>
@@ -117,23 +117,23 @@
           <h3 class="title e-mail">E-Mail <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Number of Mailboxes</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Number of Mailboxes</td>
               <td>5</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> MailScanner Inbound Spam Filtering</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> MailScanner Inbound Spam Filtering</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> MailChannels Outbound Spam Filtering</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> MailChannels Outbound Spam Filtering</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Webmail Email Access</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Webmail Email Access</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> POP3/IMAP/SMTP Email Access</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> POP3/IMAP/SMTP Email Access</td>
               <td>Included</td>
             </tr>
           </table>
@@ -152,31 +152,31 @@
           <h3 class="title package">Package Allowances <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Websites</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Websites</td>
               <td>10</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Subdomains</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Subdomains</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> SSD Cloud Disk Space</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> SSD Cloud Disk Space</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Monthly traffic</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Monthly traffic</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> MariaDB 10.5 Databases</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> MariaDB 10.5 Databases</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Website Migration Support</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Website Migration Support</td>
               <td>Free</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Site.Pro SiteBuilder</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Site.Pro SiteBuilder</td>
               <td>Included</td>
             </tr>
           </table>
@@ -185,23 +185,23 @@
           <h3 class="title webServer">Web Server <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
-              <td width="65%"><img src="images/question-mark.png" alt=""> LetsEncrypt SSL Certificate</td>
+              <td width="65%"><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> LetsEncrypt SSL Certificate</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Speed</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Speed</td>
               <td><span>2GB RAM 50 Processes</span></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> iNode Limit</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> iNode Limit</td>
               <td>200,000</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Web Server</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Web Server</td>
               <td><span>Litespeed Enterprise</span></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> PHP Version Support</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> PHP Version Support</td>
               <td>PHP 7 &amp; 8</td>
             </tr>
           </table>
@@ -210,23 +210,23 @@
           <h3 class="title e-mail">E-Mail <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Number of Mailboxes</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Number of Mailboxes</td>
               <td>10</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> MailScanner Inbound Spam Filtering</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> MailScanner Inbound Spam Filtering</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> MailChannels Outbound Spam Filtering</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> MailChannels Outbound Spam Filtering</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Webmail Email Access</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Webmail Email Access</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> POP3/IMAP/SMTP Email Access</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> POP3/IMAP/SMTP Email Access</td>
               <td>Included</td>
             </tr>
           </table>
@@ -244,31 +244,31 @@
           <h3 class="title package">Package Allowances <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Websites</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Websites</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Subdomains</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Subdomains</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> SSD Cloud Disk Space</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> SSD Cloud Disk Space</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Monthly traffic</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Monthly traffic</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> MariaDB 10.5 Databases</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> MariaDB 10.5 Databases</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Website Migration Support</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Website Migration Support</td>
               <td>Free</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Site.Pro SiteBuilder</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Site.Pro SiteBuilder</td>
               <td>Included</td>
             </tr>
           </table>
@@ -277,23 +277,23 @@
           <h3 class="title webServer">Web Server <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
-              <td width="65%"><img src="images/question-mark.png" alt=""> LetsEncrypt SSL Certificate</td>
+              <td width="65%"><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> LetsEncrypt SSL Certificate</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Speed</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Speed</td>
               <td><span>3GB RAM 75 Processes</span></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> iNode Limit</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> iNode Limit</td>
               <td>300,000</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Web Server</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Web Server</td>
               <td><span>Litespeed Enterprise</span></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> PHP Version Support</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> PHP Version Support</td>
               <td>PHP 7 &amp; 8</td>
             </tr>
           </table>
@@ -302,23 +302,23 @@
           <h3 class="title e-mail">E-Mail <i class="fa fa-chevron-up" aria-hidden="true"></i></h3>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" class="priceTbl">
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Number of Mailboxes</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Number of Mailboxes</td>
               <td><strong>Unlimited</strong></td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> MailScanner Inbound Spam Filtering</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> MailScanner Inbound Spam Filtering</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> MailChannels Outbound Spam Filtering</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> MailChannels Outbound Spam Filtering</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> Webmail Email Access</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> Webmail Email Access</td>
               <td>Included</td>
             </tr>
             <tr>
-              <td><img src="images/question-mark.png" alt=""> POP3/IMAP/SMTP Email Access</td>
+              <td><b class="tooltips"><img src="images/question-mark.png" alt=""> <i class="tooltiptext">Tooltip text  Lorem</i></b> POP3/IMAP/SMTP Email Access</td>
               <td>Included</td>
             </tr>
           </table>
